app/assets/styles/layout/_site-footer.scss
.site-footer {
  background-color: $black;
  text-align: center;
  padding: 5.5rem 0;

  p {
    font-size: 1.250em;
    letter-spacing: 0.125em;
    line-height: 1.25;

    @include atSmall {
      font-size: 1.563em;
      line-height: 3.842;
      position: relative;      
      left: 20px;
    }
  }

  a {
    color: $yellow;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  }

  .social-icons {
    margin-top: .3rem;

    img {
      margin: 1rem;
    }

    @include atSmall {
      position: relative;
      left: 10px;
    }
  }
}

